[package]
name = "triemap"
version = "0.1.0"
edition = "2021"
authors = ["Mate Kovacs & The Triemap-rs Contributors"]
description = "Triemaps for Rust"
homepage = "https://github.com/mkovaxx/triemap-rs"
repository = "https://github.com/mkovaxx/triemap-rs"
readme = "README.md"
license = "MIT"
keywords = ["triemap", "macro", "map", "indexing"]
categories = ["data-structures"]
exclude = [".gitignore"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
heck = "0.5.0"
proc-macro2 = "1.0.79"
quote = "1.0.35"
slotmap = "1.0.7"
syn = { version = "2.0.55", features = ["full"] }
